--- a/configfull_lite.yaml
+++ b/configfull_lite.yaml
@@ -154,7 +154,8 @@ dns:
   nameserver:
     - https://dns.google/dns-query
     - https://dns.cloudflare.com/dns-query
-
+  nameserver-policy:
+    "geosite:category-ads-all": rcode://success
 proxies: 
   - name: "🟢 直连"
     type: direct
