更新 configfull.yaml

--- a/configfull.yaml
+++ b/configfull.yaml
@@ -154,7 +154,7 @@ dns:
     - https://dns.google/dns-query
     - https://dns.cloudflare.com/dns-query
   nameserver-policy:
-    "banAd_domain": rcode://success
+    "rule-set:banAd_domain": rcode://success
 proxies: 
   - name: "🟢 直连"
     type: direct
