--- a/Rewite/config.yaml
+++ b/Rewite/config.yaml
@@ -22,7 +22,8 @@ dns:
   nameserver:
     - quic://dns.alidns.com/dns-query
     - https://sm2.doh.pub/dns-query
-
+  nameserver-policy:
+    "rule-set:banAd_domain": rcode://success
 # 锚点区
 Proxy_first: &Proxy_first {type: select, proxies: [节点选择, 香港节点, 新加坡节点, 日本节点, 台湾节点, 美国节点, 欧洲节点, 全部节点, 自建/家宽节点, 全球直连]}
 
