--- a/Rewite/config-lite.yaml
+++ b/Rewite/config-lite.yaml
@@ -15,14 +15,14 @@ dns:
     - "rule-set:fakeip_filter_domain"
     - "geosite:cn,category-games@cn,private"
   default-nameserver:
-    - 223.5.5.5
     - 119.29.29.29
+    - 180.184.1.1
   proxy-server-nameserver:
-    - quic://dns.alidns.com/dns-query
-    - https://sm2.doh.pub/dns-query 
-  nameserver:
-    - quic://dns.alidns.com/dns-query
-    - https://sm2.doh.pub/dns-query
+    - https://doh.pub/dns-query
+    - https://223.5.5.5/dns-query 
+  direct-nameserver:
+    - https://doh.pub/dns-query
+    - https://223.5.5.5/dns-query 
   nameserver-policy:
     "geosite:category-ads-all": rcode://success
 # 锚点区
