--- a/Rewite/config-lite.yaml
+++ b/Rewite/config-lite.yaml
@@ -22,7 +22,10 @@ dns:
     - https://223.5.5.5/dns-query 
   direct-nameserver:
     - https://doh.pub/dns-query
-    - https://223.5.5.5/dns-query 
+    - https://223.5.5.5/dns-query
+  nameserver:
+    - https://dns.google/dns-query
+    - https://dns.cloudflare.com/dns-query
   nameserver-policy:
     "geosite:category-ads-all": rcode://success
 # 锚点区
