--- a/configfull_lite.yaml
+++ b/configfull_lite.yaml
@@ -51,6 +51,8 @@ ipv6: true
 allow-lan: true
 unified-delay: true
 tcp-concurrent: true
+# 全局 TLS 指纹默认随机
+global-client-fingerprint: random
 # interface-name: eth0  （路由器下根据情况指定出站接口）
 authentication:
 #  密码设置选项默认无
