--- a/.github/workflows/Rewrite.yml
+++ b/.github/workflows/Rewrite.yml
@@ -2,7 +2,7 @@ name: Daily update config
 
 on:
   schedule:
-    # 北京/东京时间 05:00 (UTC 20:00)
+    # 每天东京/北京时间 05:00 执行 (UTC 20:00)
     - cron: '0 20 * * *'
   workflow_dispatch:
 
@@ -13,24 +13,17 @@ jobs:
   update-config:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout default branch
+      # 1. 拉取仓库
+      - name: Checkout repo
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0   # 取全历史，方便切换/创建分支
 
-      - name: Ensure Rewrite branch exists
+      # 2. 配置提交身份
+      - name: Set git identity
         run: |
-          if git ls-remote --exit-code --heads origin Rewrite; then
-            echo "Branch Rewrite exists."
-            git checkout Rewrite
-          else
-            echo "Branch Rewrite not found, creating..."
-            git checkout --orphan Rewrite
-            rm -rf *
-            git commit --allow-empty -m "init Rewrite branch"
-            git push origin Rewrite
-          fi
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
+      # 3. 拉取并处理文件，保存到 /Rewrite
       - name: Fetch and transform
         run: |
           set -euo pipefail
@@ -38,13 +31,13 @@ jobs:
           mkdir -p Rewrite
           tmp="$(mktemp)"
 
-          # 1) 拉取远程 YAML
+          # 拉取远程 YAML
           curl -fsSL "https://raw.githubusercontent.com/Lanlan13-14/Rules/refs/heads/main/configfull.yaml" -o "$tmp"
 
-          # 2) 替换 proxies 段落
+          # 替换 proxies 段落
           perl -0777 -pe 's/proxies:\n  - name: "🟢 直连"\n    type: direct\n    udp: true/+proxies:\n  - name: "🟢 直连"\n    type: direct\n    udp: true/s' -i "$tmp"
 
-          # 3) 删除 PProviders 到第二个分隔行之间的块
+          # 删除 PProviders 到第二个分隔行之间的块（缩进无关）
           awk 'BEGIN{inblock=0;delims=0}
                {
                  if(inblock){
@@ -54,7 +47,7 @@ jobs:
                    }
                    next
                  }
-                 if($0 ~ /^PProviders: *&PProviders /){
+                 if($0 ~ /^[[:space:]]*PProviders: *&PProviders /){
                    inblock=1; delims=0; next
                  }
                  print
@@ -62,14 +55,13 @@ jobs:
 
           rm -f "$tmp"
 
+      # 4. 仅在内容变化时提交
       - name: Commit and push changes
         run: |
           if git diff --quiet -- Rewrite/config.yaml; then
             echo "No changes to commit."
             exit 0
           fi
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add Rewrite/config.yaml
           git commit -m "Auto update Rewrite/config.yaml"
-          git push origin Rewrite
+          git push
