--- a/.github/workflows/Rewrite.yml
+++ b/.github/workflows/Rewrite.yml
@@ -1,8 +1,8 @@
-name: Daily update config
+name: Daily batch update configs
 
 on:
   schedule:
-    # 每天东京/北京时间 05:00 (UTC 20:00)
+    # 每天东京/北京时间 05:00 执行 (UTC 20:00)
     - cron: '0 20 * * *'
   workflow_dispatch:
 
@@ -10,7 +10,7 @@ permissions:
   contents: write
 
 jobs:
-  update-config:
+  update-configs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -21,47 +21,62 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Fetch and transform to /Rewrite/config.yaml
+      - name: Fetch and transform all configs
         shell: bash
         run: |
           set -euo pipefail
           mkdir -p Rewrite
-          tmp="$(mktemp)"
 
-          # 1) 拉取远程 YAML
-          curl -fsSL "https://raw.githubusercontent.com/Lanlan13-14/Rules/refs/heads/main/configfull.yaml" -o "$tmp"
+          # 要处理的 URL 列表
+          urls=(
+            "https://raw.githubusercontent.com/Lanlan13-14/Rules/refs/heads/main/configfull.yaml"
+            "https://raw.githubusercontent.com/Lanlan13-14/Rules/refs/heads/main/configfull_NoAd.yaml"
+            "https://raw.githubusercontent.com/Lanlan13-14/Rules/refs/heads/main/configfull_lite.yaml"
+            "https://raw.githubusercontent.com/Lanlan13-14/Rules/refs/heads/main/configfull_NoAd_lite.yaml"
+          )
 
-          # 2) 在 proxy-groups 之前的范围内，把目标 proxies 段落改成 +proxies
-          awk 'BEGIN{before_pg=1}
-               /^[[:space:]]*proxy-groups:/ {before_pg=0}
-               {
-                 if (before_pg && $0 ~ /^[[:space:]]*proxies:[[:space:]]*$/) {
-                   sub(/proxies:/, "+proxies:")
-                 }
-                 print
-               }' "$tmp" > "${tmp}_step1"
+          for url in "${urls[@]}"; do
+            tmp="$(mktemp)"
+            curl -fsSL "$url" -o "$tmp"
 
-          # 3) 删除 PProviders 到第二个分隔行之间的块（缩进无关）
-          awk 'BEGIN{inblock=0;delims=0}
-               {
-                 if(inblock){
-                   if($0 ~ /^##############################################$/){
-                     delims++
-                     if(delims==2){inblock=0; next} else {next}
+            # 生成目标文件名（configfull → config）
+            base="$(basename "$url")"
+            outname="${base/configfull/config}"
+            outfile="Rewrite/$outname"
+
+            # 1) 只在 proxy-groups 之前替换顶级 proxies: → +proxies:
+            awk 'BEGIN{before_pg=1}
+                 /^[[:space:]]*proxy-groups:/ {before_pg=0}
+                 {
+                   if (before_pg && $0 ~ /^[[:space:]]*proxies:[[:space:]]*$/) {
+                     sub(/proxies:/, "+proxies:")
                    }
-                   next
-                 }
-                 if($0 ~ /^[[:space:]]*PProviders:.*&PProviders/){
-                   inblock=1; delims=0; next
-                 }
-                 print
-               }' "${tmp}_step1" > Rewrite/config.yaml
+                   print
+                 }' "$tmp" > "${tmp}_step1"
 
-          rm -f "$tmp" "${tmp}_step1"
+            # 2) 删除 PProviders 块（缩进无关，直到第二个分隔线）
+            awk 'BEGIN{inblock=0;delims=0}
+                 {
+                   if(inblock){
+                     if($0 ~ /^##############################################$/){
+                       delims++
+                       if(delims==2){inblock=0; next} else {next}
+                     }
+                     next
+                   }
+                   if($0 ~ /^[[:space:]]*PProviders:.*&PProviders/){
+                     inblock=1; delims=0; next
+                   }
+                   print
+                 }' "${tmp}_step1" > "$outfile"
+
+            rm -f "$tmp" "${tmp}_step1"
+            echo "Processed $url -> $outfile"
+          done
 
       - name: Commit and push
         shell: bash
         run: |
-          git add Rewrite/config.yaml
-          git commit -m "Auto update Rewrite/config.yaml" || echo "No changes to commit."
+          git add Rewrite/
+          git commit -m "Auto update configs in /Rewrite" || echo "No changes to commit."
           git push
