--- a/.github/workflows/banAd_mini.yml
+++ b/.github/workflows/banAd_mini.yml
@@ -36,6 +36,9 @@ jobs:
         # 下载 AI 规则文件
         curl -sL "https://raw.githubusercontent.com/TG-Twilight/AWAvenue-Ads-Rule/refs/heads/main/Filters/AWAvenue-Ads-Rule-Clash.yaml" -o rules/Domain/banAd_mini.yaml
 
+        # 删除 # 开头的注释行和空行
+        sed -i '/^\s*#/d;/^\s*$/d' rules/Domain/banAd_mini.yaml
+
     - name: Convert BanAd_mini Rules to MRS
       run: |
         # 使用 mihomo 转换为 MRS 格式
