--- a/.github/workflows/banAd_mini.yml
+++ b/.github/workflows/banAd_mini.yml
@@ -31,12 +31,12 @@ jobs:
 
     - name: Fetch BanAd_mini Rules
       run: |
-        mkdir -p rules/Domain  # 确保目录存在
+        mkdir -p rules/Domain
 
         # 下载 banAd_mini.yaml
         curl -sL "https://raw.githubusercontent.com/TG-Twilight/AWAvenue-Ads-Rule/refs/heads/main/Filters/AWAvenue-Ads-Rule-Clash.yaml" -o rules/Domain/banAd_mini.yaml
 
-        # 删除 # 开头的注释行和空行
+        # 删除注释和空行
         sed -i '/^\s*#/d;/^\s*$/d' rules/Domain/banAd_mini.yaml
 
     - name: Fetch and Merge pcdn.json Rules
@@ -44,21 +44,25 @@ jobs:
         # 下载 pcdn.json
         curl -sL "https://raw.githubusercontent.com/DDCHlsq/sing-ruleset/refs/heads/master/pcdn.json" -o pcdn.json
 
-        # 提取 domain 和 domain_suffix，追加到 banAd_mini.yaml
-        domains=$(jq -r '.rules[].domain[]?' pcdn.json)
-        for d in $domains; do
+        # 提取 domain
+        jq -r '.rules[].domain[]?' pcdn.json | while read -r d; do
           echo "  - '$d'" >> rules/Domain/banAd_mini.yaml
         done
 
-        suffixes=$(jq -r '.rules[].domain_suffix[]?' pcdn.json)
-        for s in $suffixes; do
-          clean=$(echo "$s" | sed 's/^\.//')   # 去掉开头的 .
+        # 提取 domain_suffix 并去掉开头的 .
+        jq -r '.rules[].domain_suffix[]?' pcdn.json | while read -r s; do
+          clean=${s#.}
           echo "  - '*.$clean'" >> rules/Domain/banAd_mini.yaml
         done
 
+    - name: Deduplicate and Clean Rules
+      run: |
+        # 去重并去掉多余空行
+        grep -v '^\s*$' rules/Domain/banAd_mini.yaml | sort -u > rules/Domain/tmp.yaml
+        mv rules/Domain/tmp.yaml rules/Domain/banAd_mini.yaml
+
     - name: Convert BanAd_mini Rules to MRS
       run: |
-        # 使用 mihomo 转换为 MRS 格式
         mihomo convert-ruleset domain yaml rules/Domain/banAd_mini.yaml rules/Domain/banAd_mini.mrs
 
     - name: Commit and Push Changes
