--- a/.github/workflows/banAd_mini.yml
+++ b/.github/workflows/banAd_mini.yml
@@ -25,9 +25,8 @@ jobs:
 
     - name: Install mihomo
       run: |
-        version=$(curl -sL https://github.com/MetaCubeX/mihomo/releases/download/Prerelease-Alpha/version.txt)
-        curl -sL "https://github.com/MetaCubeX/mihomo/releases/download/Prerelease-Alpha/mihomo-linux-amd64-${version}.gz" | \
-          gunzip -c > /usr/local/bin/mihomo && chmod +x /usr/local/bin/mihomo
+        python3 -m pip install --upgrade pip
+        pip install -U git+https://github.com/KT-Yeh/mihomo.git
 
     - name: Fetch BanAd_mini Rules
       run: |
