--- a/.github/workflows/banAd_mini.yml
+++ b/.github/workflows/banAd_mini.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip
         pip install -U git+https://github.com/KT-Yeh/mihomo.git
+        export PATH="$HOME/.local/bin:$PATH"
 
     - name: Fetch BanAd_mini Rules
       run: |
