--- a/.github/workflows/banAd_mini.yml
+++ b/.github/workflows/banAd_mini.yml
@@ -26,8 +26,9 @@ jobs:
     - name: Install mihomo
       run: |
         python3 -m pip install --upgrade pip
-        python3 -m pip install --user -U git+https://github.com/KT-Yeh/mihomo.git
-        export PATH="$HOME/.local/bin:$PATH"
+        python3 -m pip install --target /tmp/mihomo git+https://github.com/KT-Yeh/mihomo.git
+        cp /tmp/mihomo/mihomo /usr/local/bin/mihomo
+        chmod +x /usr/local/bin/mihomo
 
     - name: Fetch BanAd_mini Rules
       run: |
