--- a/.github/workflows/banAd_mini.yml
+++ b/.github/workflows/banAd_mini.yml
@@ -39,10 +39,13 @@ jobs:
         # 删除 # 开头的注释行和空行
         sed -i '/^\s*#/d;/^\s*$/d' rules/Domain/banAd_mini.yaml
 
-    - name: Fetch and Merge pcdn.json Rules with Deduplication
+    - name: Fetch, Merge and Add Custom Rules with Deduplication
       run: |
         # 下载 pcdn.json
         curl -sL "https://raw.githubusercontent.com/DDCHlsq/sing-ruleset/refs/heads/master/pcdn.json" -o pcdn.json
+
+        # 下载自定义规则 pcdn.list
+        curl -sL "https://raw.githubusercontent.com/Lanlan13-14/Rules/refs/heads/main/rules/Domain/pcdn.list" -o pcdn.list
 
         # 创建临时文件存放所有规则
         tmp_file=$(mktemp)
@@ -56,11 +59,14 @@ jobs:
         # 提取 pcdn.json 中 domain_suffix，去掉开头的 . 并加 '*.' 前缀
         jq -r '.rules[].domain_suffix[]?' pcdn.json | sed 's/^\.//' | sed 's/^/*./' >> "$tmp_file"
 
+        # 处理 pcdn.list 文件
+        sed -E 's/^DOMAIN-SUFFIX,(.*)/*.\1/; s/^DOMAIN,(.*)/\1/' pcdn.list >> "$tmp_file"
+
         # 去重并写回 banAd_mini.yaml
         echo "payload:" > rules/Domain/banAd_mini.yaml
         sort -u "$tmp_file" | awk '{print "  - \047"$0"\047"}' >> rules/Domain/banAd_mini.yaml
 
-        rm -f "$tmp_file" pcdn.json
+        rm -f "$tmp_file" pcdn.json pcdn.list
 
     - name: Convert BanAd_mini Rules to MRS
       run: |
