--- a/configfull.yaml
+++ b/configfull.yaml
@@ -16,7 +16,7 @@ PProviders: &PProviders {type: http, interval: 86400, health-check: {enable: tru
 proxy-providers:
   Airport_01:
     <<: *PProviders
-    proxy: "🟢 直连"
+    proxy: "故障转移"
     url: "订阅链接1"
     override:
       additional-prefix: '[机场名称1]'
@@ -24,7 +24,7 @@ proxy-providers:
       udp: true
   Airport_02:
     <<: *PProviders
-    proxy: "🟢 直连"
+    proxy: "故障转移"
     url: "订阅链接2"
     override:
       additional-prefix: '[机场名称2]'
@@ -32,7 +32,7 @@ proxy-providers:
       udp: true
   Airport_03:
     <<: *PProviders
-    proxy: "🟢 直连"
+    proxy: "故障转移"
     url: "订阅链接3"
     override:
       additional-prefix: '[机场名称3]'
@@ -225,7 +225,7 @@ proxy-groups:
   - {name: 🚫 拒绝, type: select, hidden: true, proxies: [REJECT]}
   - {name: ⚪ 丢弃, type: select, hidden: true, proxies: [REJECT-DROP]}
 # over
-  - {name: 故障转移, type: fallback, include-all: true, proxies: [香港节点, 新加坡节点, 日本节点, 台湾节点, 美国节点, 欧洲节点, 自建/家宽节点], interval: 120, icon: "https://pub-8feead0908f649a8b94397f152fb9cba.r2.dev/fallback.png"}
+  - {name: 故障转移, type: fallback, include-all: true, interval: 120, icon: "https://pub-8feead0908f649a8b94397f152fb9cba.r2.dev/fallback.png"}
   - {name: GLOBAL, type: select, include-all: true , proxies: [节点选择, YouTube, GoogleVPN, FCM, Google, Meta, AI, GitHub, OneDrive, Microsoft, Telegram, Discord, Talkatone, LINE, Signal, TikTok, NETFLIX, DisneyPlus, HBO, Primevideo, AppleTV, Apple, Emby, 哔哩哔哩, 哔哩东南亚, 巴哈姆特, Spotify, 国内媒体, Global-TV, Global-Medial, 游戏平台, Speedtest, PayPal, Wise, 国外电商, STEAM, 全球直连, 隐私拦截, Final, 自建/家宽节点, 香港节点, 新加坡节点, 日本节点, 台湾节点, 美国节点, 欧洲节点, 全部节点, 香港自动, 新加坡自动, 日本自动, 台湾自动, 美国自动, 香港均衡, 新加坡均衡, 日本均衡, 台湾均衡, 美国均衡, 故障转移], exclude-filter: "(?i)(🟢 直连)", icon: "https://pub-8feead0908f649a8b94397f152fb9cba.r2.dev/global.png"}
 rules: 
   - RULE-SET,banAd_domain,隐私拦截
