更新 configfull_NoAd_lite.yaml

--- a/configfull_NoAd_lite.yaml
+++ b/configfull_NoAd_lite.yaml
@@ -16,7 +16,7 @@ PProviders: &PProviders {type: http, interval: 86400, health-check: {enable: tru
 proxy-providers:
   Airport_01:
     <<: *PProviders
-    proxy: "🟢 直连"
+    proxy: "故障转移"
     url: "订阅链接1"
     override:
       additional-prefix: '[机场名称1]'
@@ -24,7 +24,7 @@ proxy-providers:
       udp: true
   Airport_02:
     <<: *PProviders
-    proxy: "🟢 直连"
+    proxy: "故障转移"
     url: "订阅链接2"
     override:
       additional-prefix: '[机场名称2]'
@@ -32,7 +32,7 @@ proxy-providers:
       udp: true
   Airport_03:
     <<: *PProviders
-    proxy: "🟢 直连"
+    proxy: "故障转移"
     url: "订阅链接3"
     override:
       additional-prefix: '[机场名称3]'
@@ -208,7 +208,7 @@ proxy-groups:
   - {name: 日本均衡, type: load-balance, include-all: true, strategy: consistent-hashing, hidden: true, filter: "(?=.*(?i)(日本|🇯🇵|JP|Japan))" ,exclude-filter: "(?=.*(?i)(The_JP_balance|wcloud|0倍|0\\.1倍|0\\.01倍|0\\.3X|0\\.2x|0\\.5x|3X|2x|1\\.5x|traffic|plus))", icon: "https://pub-8feead0908f649a8b94397f152fb9cba.r2.dev/load-balance.png"}
   - {name: 台湾均衡, type: load-balance, include-all: true, strategy: consistent-hashing, hidden: true, filter: "(?=.*(?i)(台|🇹🇼|TW|Taiwan))" ,exclude-filter: "(?=.*(?i)(The_TW_balance|wcloud|0倍|0\\.1倍|0\\.01倍|0\\.3X|0\\.2x|0\\.5x|3X|2x|1\\.5x|traffic|plus))", icon: "https://pub-8feead0908f649a8b94397f152fb9cba.r2.dev/load-balance.png"}
   - {name: 美国均衡, type: load-balance, include-all: true, strategy: consistent-hashing, hidden: true, filter: "(?=.*(?i)(美|🇺🇲|US|America|united States|Ashburn))" ,exclude-filter: "(?=.*(?i)(The_US_balance|wcloud|0倍|0\\.1倍|0\\.01倍|0\\.3X|0\\.2x|0\\.5x|3X|2x|1\\.5x|russia|austria|plus|traffic|Australia|rus|aus))", icon: "https://pub-8feead0908f649a8b94397f152fb9cba.r2.dev/load-balance.png"}
-  - {name: 故障转移, type: fallback, include-all: true, proxies: [香港节点, 新加坡节点, 日本节点, 台湾节点, 美国节点, 欧洲节点, 自建/家宽节点], interval: 300, exclude-filter: "(?i)(🟢 直连)", icon: "https://pub-8feead0908f649a8b94397f152fb9cba.r2.dev/fallback.png"}
+  - {name: 故障转移, type: fallback, include-all: true, interval: 300, icon: "https://pub-8feead0908f649a8b94397f152fb9cba.r2.dev/fallback.png"}
 # 功能型代理组默认隐藏 start
   - {name: 🔗 代理, type: select, hidden: true, proxies: [节点选择]}
 # over
